 - removed unused module for fixing Illumina config files
 - removed unused module for LSF job creation for tag deplexing -
   this is now done within p4 stage 1
 - removed unused implementation for function copy_interop_files_to_irods
 - removed unused spatial_filter, fix_broken_files and force_phix_split flags
 - removed a number of unused methods in npg_pipeline::base

release 51.11.3
 - seq_alignment: fixes for no target alignment and no target alignment+non-consented human split 

release 51.11.2
 - use align_intfile_opt=1 when aligning with star to produce intermediate bam file
 - by default, force bambi i2b to single-threading (general_values parameter available for override)

release 51.11.1
 - Handle dual indexes (create new format lane tag files)
 - remove remaining broken provisions for xml LIMs driver 
 - use the new log publisher
 - now allows XA/Y-split with no target alignment

release 51.11.0
 - added support for RNA analysis/quantification using STAR and salmon
 - STAR alignment jobs get more memory using bmod after seq_alignment jobs have been submitted.
 - removed unneeded coordinate sort and duplicate marking when there is no alignment to a target reference

release 51.10.3
 - no alignments for chromium libraries
 - seq_alignment to do_rna analysis regardless of the organism specified (other conditions stay in place)

release 51.10.2
 - use bwa aln for human split with tophat target alignment

release 51.10.1
 - Modified qc run function list, removed copy_interop and switched archive_to_irods to samplesheet
 
release 51.10
 - Chained execution of RNA-SeQC to the vtfp/viv alignment cmd for RNA-Seq libraries only:
     entries for qc check rna_seqc removed from central function and parallelisation.
     code that created rna_seqc-specific directories has been removed as this is
     now handled by the check itself using qc_out arg.
 - remove GCLP-specific code and configuration files
 - remove unused force_p4 attribute
 - OLB analysis removed