@@ -21,6 +21,7 @@ LIST OF CHANGES
  - removed unused implementation for function copy_interop_files_to_irods
  - removed unused spatial_filter, fix_broken_files and force_phix_split flags
  - removed a number of unused methods in npg_pipeline::base
+ - new modules to execute submission of commands in definitions to LSF
 
 release 51.11.3
  - seq_alignment: fixes for no target alignment and no target alignment+non-consented human split 
